OpenSLP Change Log (stable-1-0)
-------------------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

*** Tag OpenSLP-1.0.6 ***

12/04/01 matt@caldera.com
Applied patch from Tim Zurcher that sets FRESH flag for registrations.
OpenSLP ignores this flag, but other DA implementations like K&A SLP do not.

11/21/01 matt@caldera.com
Made a change to the outgoing socket send code that unlinks the sendbuf 
from the send list before it is sent.  This way if there is a reconnect
failure and the socket is SLPDSocketFree()d then the sendbuf won't be
SLPBufferFree()d twice.  This fixes a SEGV in the SA when a DA goes down 
during a transaction.

*** Tag OpenSLP-1.0.5 ***

11/15/01 matt@caldera.com
Added Timothy Zurcher to the THANKS file.  He deserves it!

11/13/01 matt@caldera.com
Minor changes to the way that settings from /etc/slp.conf affect active and 
passive discovery.

11/10/01 matt@caldera.com
Applied fix from Tim Zurcher that makes it so that errorcodes for
service-agent and directory-agent SrvRqsts are returned correctly.

11/09/01 matt@caldera.com
Fixed possible SEGV when reconnect to DA failed.  With out this change
it would be possible to need a NULL socket structure to the outgoing
socket list.  This would be very bad.

11/07/01 matt@caldera.com
Properly rooted startup scripts

11/2/01 matt@caldera.com
Changed declaration and definition for strncasecmp and strcasecmp so that
there is only one place for them in slp_compare.c and slp_compare.h

11/1/01 matt@caldera.com
Honor scopes in SrvRqsts for the special "service:directory-agent" type

10/31/01 matt@caldera.com
Fixed problem with SLPEscape() as patched by Timothy Zurcher

*** Tag OpenSLP-1.0.4 ***

10/18/01 matt@caldera.com